# alurainvest

./: README.md  pyproject.toml  requirements.txt
alurainvest/: account.py  client.py  dates.py
