[tool.poetry]
name = "alurainvest"
version = "0.1.0"
description = ""
authors = ["datalastix <datalastix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
commitizen = "^3.8.0"
pre-commit = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version = "0.0.1"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
